--- a/templates/index.pug
+++ b/templates/index.pug
@@ -3,42 +3,42 @@ html(lang="en")
   head
     title= "Alexander Sopov - " + pages[0].title
     meta(charset="utf-8")
-    meta(name="description", content="TeddyBear Studio")
+    meta(name="description", content="Personal Portfolio")
     meta(name="author", content="Alexander Sopov")
     meta(name="viewport", content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no")
+    link(href="https://fonts.googleapis.com/css?family=Gentium+Basic|Josefin+Sans:300,400", rel="stylesheet")
     link(rel="stylesheet", href="css/style.css")
     script(src="https://code.jquery.com/jquery-2.2.4.min.js")
     script(src="js/script.js")
-    script(src="https://use.typekit.net/dql6fkf.js")
   body
-    header(class="tk-bebas-neue")
-      .container
-        .header-img
-          img(src="img/headerImg.jpg")
-        .headlines
-          h1=heading
-          h2=subheading
-        p(class="tk-source-sans-pro")
-          i=slogan
-        .navbar
+    header
+      div#logo
+        h3=logo
+        div#navbar.container
           ul
             - for (var i=0; i<pages.length;i++)
               - var title = pages[i].title, url = "#"+title;
               li
-                button(onclick="script.openPage(this)" class="tk-bebas-neue") #{title}
-      h1#stickyTitle.tk-bebas-neue=heading
-    - for(var i=0; i<pages.length;i++)
-      - var page = pages[i];
-        if page.content
+                button(onclick="script.openPage(this)") #{title}
+    .header-img
+      img(src="img/headerImg.jpg")
+    .container
+      - for(var i=0; i<pages.length;i++)
+        - var page = pages[i];
           div(id=page.title, class=i==0 ? 'page active' : 'page')
+            .title
+              h1=page.title
+            hr
             - for(var j=0; j<page.content.length;j++)
               - var content = page.content[j];
-              div(id=content.h1, class=j==0 ? 'content active' : 'content')
-                div(class="pattern")
-                h1(class="tk-bebas-neue") #{content.h1}
-                h2(class="tk-bebas-neue") #{content.h2}
+              div(id=content.h1, class=j==0 ? 'content .active' : 'content')
+                h2=content.h1
+                h3=content.h2
                 - for(var k=0; k<content.p.length;k++)
                   - var p = content.p[k];
-                    p(class="tk-source-sans-pro") #{p}
+                    p=p
+    div#footer
+      .logo
+        h3=logo
 
       
