--- a/templates/index.pug
+++ b/templates/index.pug
@@ -18,34 +18,36 @@ html(lang="en")
         - for (var i=0; i<pages.length;i++)
           - var title = pages[i].title, url = "#"+title;
           button(onclick="script.openPage(this)") #{title}
-    .header-img
+    #header-img
       img(src="img/headerImg.jpg")
-    .container
-      - for(var i=0; i<pages.length;i++)
-        - var page = pages[i];
-          div(id=page.title, class=i==0 ? 'page active' : 'page')
-            .title
-              h1=page.title+"."
-            hr
-            .ingress
-              p=page.ingress
-            .content-wrap
-              - for(var j=0; j<page.content.length;j++)
-                - var content = page.content[j];
-                div(id=content.h1, class=(j%2)==0 ? 'content left' : 'content')
-                  h2=content.h1
-                  h3=content.h2
-                  - for(var k=0; k<content.p.length;k++)
-                    - var p = content.p[k];
-                      p=p
-    div#footer
-      .logo
-        h3=logo
-      .email
-        h3=contact.email
-      .github
-        h3=contact.github
-      .copyright
-        h3=copyright
+    div#body
+      .container
+        - for(var i=0; i<pages.length;i++)
+          - var page = pages[i];
+            div(id=page.title, class=i==0 ? 'page active' : 'page')
+              .title
+                h1=page.title+"."
+              hr
+              .ingress
+                p=page.ingress
+              .content-wrap
+                - for(var j=0; j<page.content.length;j++)
+                  - var content = page.content[j];
+                  div(id=content.h1, class=(j%2)==0 ? 'content left' : 'content')
+                    h2=content.h1
+                    h3=content.h2
+                    - for(var k=0; k<content.p.length;k++)
+                      - var p = content.p[k];
+                        p=p
+      div#footer
+        .container
+          .logo
+            h3=logo
+          .email
+            h3=contact.email
+          .github
+            h3=contact.github
+          .copyright
+            h3=copyright
 
-      
+        
