--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -1,6 +1,8 @@
 width = 70%
 margin = 15%
 headerHeight = 70px
+navHeight = headerHeight * 3
+animationTime = 0.5s
 *
 	/*border 1px solid black*/
 body
@@ -15,6 +17,13 @@ body
 	background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 38%, rgba(237,237,237,1) 100%);
 	background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 38%, rgba(237,237,237,1) 100%);
 	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 38%, rgba(237,237,237,1) 100%);*/
+
+
+
+/*
+ *	FONTS
+ */
+ 
 h1
 	font-size 2.9em
 	font-family 'Palatino Linotype'
@@ -31,59 +40,99 @@ p
 
 #footer .container div h3
 	font-size 1.2em
-#body
-	padding-top 90px
-	background-color white
-	width 100%
-	position relative
-	top 100px
-.container
-	width width
-	margin-left margin
-	margin-right margin
+	
+
+/*
+ *	HEADER
+ */
+ 
 header
+	overflow hidden
+	transition: all animationTime ease;
 	display flex
 	flew-wrap wrap
-	z-index 1
+	z-index 3
 	background: rgba(255,255,255,1);
 	width:100%
 	position fixed
 	top:0px
 	height headerHeight
 	#logo
-		cursor pointer
 		display block
+		cursor pointer
+		width calc(100% / 2.2)
+		text-align right
 		h3
 			margin 0px
 			padding 20px
 	#navbar
+		position relative
 		margin 0px
-		padding:20px
-		button
-			border 0px
-			background-color inherit
-			font-family 'Josefin Sans', sans-serif
-			margin-left 5px
-			margin-right 5px
-			font-size 1.3em
-			cursor pointer
+		padding:0px
+		width calc(100% / 1.8)
+		height navHeight
+		transition: all animationTime ease;
+		ul
+			margin 0px
+			padding 0px
+			list-style-type none
+			li
+				width 100%
+				height 100%
+				h3
+					margin 0px
+					padding-top 23px
+					padding-bottom 20px
+					text-align left
+					font-family 'Josefin Sans', sans-serif
+					font-weight 300
+					font-size 1.4em
+					cursor pointer
+			.active h3
+				text-decoration underline
+			
 #header-img
 	position: fixed
 	top headerHeight
-	z-index:-99
+	z-index 1
 	width 100%
 	img
-		width 100%
+		max-width 100%
+		height auto
 	
+/*
+ *	BODY
+ */
+ 
+#body
+	z-index 2
+	padding-top 90px
+	background-color white
+	width 100%
+	position relative
+	top 100px
 .page
 	text-align center
 	margin-bottom:100px
+.container
+	width width
+	margin-left margin
+	margin-right margin
+
 .title
 	margin-top 80px
 	h1
 		margin 20px
 .content
 	margin-top 0px
+
+
+
+/*
+ *	FOOTER
+ */
+ 
+
 #footer
 	padding 20px
 	text-align left
@@ -94,6 +143,12 @@ header
 	h3
 		font-weight 300
 		font-family 'Josefin Sans', sans-serif
+		
+
+
+
+
+
 @media only screen and (min-width 375px)
 	h1
 		font-size 3.2em
@@ -105,10 +160,14 @@ header
 		font-size 1.4em
 
 @media only screen and (min-width 769px)
+	width = 750px
+	margin = calc( (100% - 750px) / 2 )
 	h1
 		font-size 3.5em
 	.container
-		width 750px
+		width width
+		margin-left margin
+		margin-right margin
 		.page .content-wrap
 			display flex
 			flex-wrap wrap
