--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -143,10 +143,6 @@ header
 	h3
 		font-weight 300
 		font-family 'Josefin Sans', sans-serif
-		
-
-
-
 
 
 @media only screen and (min-width 375px)
@@ -158,6 +154,11 @@ header
 		font-size 1.5em
 	p
 		font-size 1.4em
+	header
+		#logo
+			width (100% / 2.5)
+		#navbar
+			width (100% / 1.5)
 
 @media only screen and (min-width 769px)
 	width = 750px
@@ -177,10 +178,6 @@ header
 				text-align left
 			.left
 				text-align right
-	header #logo
-		padding-left 0px
-		text-align right
-		width: 200px
 	.ingress p
 		font-size 2em
 
