--- a/templates/index.pug
+++ b/templates/index.pug
@@ -18,8 +18,9 @@ html(lang="en")
         ul
           - for (var i=0; i<pages.length;i++)
             - var title = pages[i].title, url = "#"+title;
-            li(onclick="script.nav.goTo(this)" class=i==0 ? "active" : "" data-value=title, id=title+"-nav")
-              h3= title+"."
+            li(onclick="script.nav.goTo(this)", data-value=title, id=title+"-nav")
+              h3!= title+"."
+        <hr>
     div#header-img
       img(src="img/headerImg.jpg")
     div#body
