--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -81,7 +81,7 @@ header
 			padding 0px
 			list-style-type none
 			li
-				border 1px solid black
+				border 1px solid white
 				width 100%
 				margin-top auto
 				margin-bottom auto
