--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -50,10 +50,10 @@ header
 	overflow hidden
 	transition: all animationTime ease;
 	display flex
-	flew-wrap wrap
+	flex-wrap wrap
 	z-index 3
-	background: rgba(255,255,255,1);
-	width:100%
+	background rgba(255,255,255,1);
+	width 100%
 	position fixed
 	top:0px
 	height headerHeight
@@ -61,36 +61,37 @@ header
 		display block
 		cursor pointer
 		width calc(100% / 2.2)
+		height 100%
 		text-align right
 		h3
+			padding 0px
 			padding-right 20px
 	#navbar
 		position relative
 		margin 0px
 		padding:0px
-		width calc(100% / 1.8)
 		height navHeight
 		transition: all animationTime ease;
 		hr 
 			position absolute
 			top -100px
 			left 00px
-			width 20%
+			width 100%
 		ul
+			list-style-type none
 			margin 0px
 			padding 0px
-			list-style-type none
-			li
+			li 
+				height: headerHeight
+				padding 0px
 				border 1px solid white
-				width 100%
-				margin-top auto
-				margin-bottom auto
 				h3
 					text-align left
 					font-family 'Josefin Sans', sans-serif
 					font-weight 300
 					font-size 1.4em
 					cursor pointer
+					padding-top 3px
 			
 #header-img
 	position: fixed
@@ -127,7 +128,7 @@ header
 .content
 	margin-top 0px
 
-
+ 
 
 /*
  *	FOOTER
@@ -139,7 +140,7 @@ header
 	text-align left
 	color #fff
 	background-color #1a1b20
-	min-height 200px
+	min-height 500px
 	margin 50px 0px 0px 0px
 	h3
 		font-weight 300
@@ -151,15 +152,11 @@ header
 		font-size 3.2em
 	h2
 		font-size 2em
-	h3
-		font-size 1.5em
 	p
 		font-size 1.4em
 	header
 		#logo
 			width (100% / 2.5)
-		#navbar
-			width (100% / 1.5)
 
 @media only screen and (min-width 769px)
 	h1
@@ -174,12 +171,11 @@ header
 		height 100px
 		#logo
 			width (100% / 2.5)
-		#navbar
-			width (100% / 1.5)
-			ul li
-				height 100px
-				h3
-					font-size 2em
+		#navbar ul li
+			height 100px
+			h3
+				font-size 2em
+				padding-top 7px
 	width = 750px
 	margin = calc( (100% - 750px) / 2 )
 
