--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -1,24 +1,13 @@
 width = 70%
 margin = 15%
 headerHeight = 70px
-navHeight = headerHeight * 3
+navHeight = 40px
 animationTime = 0.5s
 *
 	/*border 1px solid black*/
 body
 	margin 0px
 	padding 0px
-	height:100%
-	background-color white
-	/*background: rgba(255,255,255,1);
-	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 38%, rgba(237,237,237,1) 100%);
-	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(38%, rgba(246,246,246,1)), color-stop(100%, rgba(237,237,237,1)));
-	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 38%, rgba(237,237,237,1) 100%);
-	background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 38%, rgba(237,237,237,1) 100%);
-	background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 38%, rgba(237,237,237,1) 100%);
-	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 38%, rgba(237,237,237,1) 100%);*/
-
-
 
 /*
  *	FONTS
@@ -48,7 +37,7 @@ p
  
 header
 	overflow hidden
-	transition: all animationTime ease;
+	transition: all animationTime;
 	display flex
 	flex-wrap wrap
 	z-index 3
@@ -66,12 +55,13 @@ header
 		h3
 			padding 0px
 			padding-right 20px
+			margin-top 25px
 	#navbar
 		position relative
 		margin 0px
 		padding:0px
 		height navHeight
-		transition: all animationTime ease;
+		transition: all animationTime ease-out;
 		hr 
 			position absolute
 			top -100px
@@ -90,6 +80,8 @@ header
 					font-family 'Josefin Sans', sans-serif
 					font-weight 300
 					font-size 1.4em
+					margin 0px
+					margin-top 25px
 					cursor pointer
 			
 #header-img
@@ -158,6 +150,7 @@ header
 			width (100% / 2.5)
 
 @media only screen and (min-width 769px)
+	headerHeight = 100px
 	h1
 		font-size 4em
 	h2
@@ -167,14 +160,17 @@ header
 	p
 		font-size 1.6em
 	header
-		height 100px
+		height headerHeight
 		#logo
 			width (100% / 2.5)
-		#navbar ul li
-			height 100px
 			h3
-				font-size 2em
-				padding-top 7px
+				margin-top 30px
+		#navbar ul
+			li
+				height headerHeight
+				h3
+					font-size 2em
+					margin-top 35px
 	width = 750px
 	margin = calc( (100% - 750px) / 2 )
 
