--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -139,7 +139,7 @@ header
 	text-align left
 	color #fff
 	background-color #1a1b20
-	min-height 500px
+	min-height calc(100vh - 70px)
 	margin 50px 0px 0px 0px
 	h3
 		font-weight 300
@@ -193,7 +193,8 @@ header
 				text-align right
 	.ingress p
 		font-size 2em
-
+	#footer
+		min-height calc(100vh - 100px)
 
 @media only screen and (orientation: landscape)
 	#body
