--- a/templates/index.pug
+++ b/templates/index.pug
@@ -24,14 +24,26 @@ html(lang="en")
       img(src="img/headerImg.jpg")
     div#body
       .container
+        section(id=intro.title, class='page')
+          .title
+            h1=intro.title+"."
+          hr
+          h2=intro.content.h2
+          h3=intro.content.h3
+          .intro.ingress
+            - for(var i =0; i<intro.content.p.length; i++ )
+              if((i%2)==0)
+                .left-p
+                  p=intro.content.p[i]
+              else
+                .right-p
+                  p=intro.content.p[i]
         - for(var i=0; i<pages.length;i++)
           - var page = pages[i];
             section(id=page.title, class=i==0 ? 'page active' : 'page')
               .title
                 h1=page.title+"."
               hr
-              .ingress
-                p=page.ingress
               .content-wrap
                 - for(var j=0; j<page.content.length;j++)
                   - var content = page.content[j];
