i see so many changes, I wake up in the morning and... yeah

--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -104,21 +104,29 @@ header
 	width 100%
 	position relative
 	top 100px
-.page
-	text-align center
-	margin-bottom:100px
 .container
 	width width
 	margin-left margin
 	margin-right margin
 
-.title
-	margin-top 80px
-	h1
-		margin 20px
-.content
-	margin-top 0px
+	.page
+		text-align center
+		margin-bottom:100px
+		.title
+			margin-top 80px
+			h1
+				margin 20px
+		.content
+			margin-top 0px
 
+		// .intro.ingress
+		// 	div 
+		// 		margin-top 0px
+		// 		p
+		// 			margin-top inherit
+		// 	div:nth-child(1),
+		// 	div:nth-child(2)
+		// 		margin-top 20px
  
 
 /*
