--- a/templates/index.pug
+++ b/templates/index.pug
@@ -34,10 +34,10 @@ html(lang="en")
             - for(var i =0; i<intro.content.p.length; i++ )
               if((i%2)==0)
                 .left-p
-                  p=intro.content.p[i]
+                  p!=intro.content.p[i]
               else
                 .right-p
-                  p=intro.content.p[i]
+                  p!=intro.content.p[i]
         - for(var i=0; i<pages.length;i++)
           - var page = pages[i];
             section(id=page.title, class=i==0 ? 'page active' : 'page')
