--- a/templates/index.pug
+++ b/templates/index.pug
@@ -43,15 +43,6 @@ html(lang="en")
           include includes/pages.pug
         - page = pages[2];
           include includes/pages.pug
-      div#footer
-        .container
-          .logo
-            h3=logo
-          .email
-            h3=contact.email
-          .github
-            h3=contact.github
-          .copyright
-            h3=copyright
+      include includes/footer.pug
 
         
