added babel support

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -8,10 +8,10 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no")
     link(href="https://fonts.googleapis.com/css?family=Gentium+Basic|Josefin+Sans:300,400", rel="stylesheet")
     style 
-      include css/style.css
+      include ../dist/css/style.css
     script(src="https://code.jquery.com/jquery-2.2.4.min.js")
     script
-      include js/script.js
+      include ../dist/js/script.js
   body
     //
       HEADER STICKY, MENU AND LOGO
@@ -26,7 +26,7 @@ html(lang="en")
               h3!= title+"."
    
     //
-      HEADER-IMG, SUPPOSED TO CHANGE BUT FUCK UT, KEEP IT STATIC ATM
+      HEADER-IMG, SUPPOSED TO CHANGE BUT FUCK IT, KEEP IT STATIC ATM
       ***
     div#header-img
       img(src="img/headerImg.jpg")
