--- a/templates/index.pug
+++ b/templates/index.pug
@@ -11,7 +11,7 @@ html(lang="en")
       include ../dist/css/style.css
     script(src="https://code.jquery.com/jquery-2.2.4.min.js")
     script
-      include ../dist/js/script.js
+      include ../dist/js/bundle.js
   body
     //
       HEADER STICKY, MENU AND LOGO
