--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -8,10 +8,10 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no")
     link(href="https://fonts.googleapis.com/css?family=Gentium+Basic|Josefin+Sans:300,400", rel="stylesheet")
     style 
-      include ../dist/css/style.css
+      include ../../dist/css/style.css
     script(src="https://code.jquery.com/jquery-2.2.4.min.js")
     script
-      include ../dist/js/bundle.js
+      include ../../dist/js/bundle.js
   body
     //
       HEADER STICKY, MENU AND LOGO
